tests/lean/var.lean.expected.out
var.lean:6:12: error: invalid parameter declaration 'a', it depends on variable 'A'
