tests/lean/var.lean
import logic


section
  variable A : Type
  parameter a : A
end

section
  variable A : Type
  variable a : A
end
